--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.moodvie">
-
-    <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA"> </uses-permission>
+
 
     <application
         android:allowBackup="true"
@@ -16,7 +15,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".open_camera"></activity>
-        <activity android:name=".face_scan" />
+        <activity android:name=".face_scan" android:parentActivityName=".login">
+
+        </activity>
         <activity android:name=".create_account" />
         <activity android:name=".login">
             <intent-filter>
