--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 17 10:43:44 BST 2019
-sdk.dir=C\:\\AndroidSDK\\sdk
+#Thu Oct 17 14:53:52 BST 2019
+sdk.dir=C\:\\Users\\Roman\\AppData\\Local\\Android\\Sdk
