--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.moodvie">
     <uses-feature android:name="android.hardware.camera" />
-    <uses-permission android:name="android.permission.CAMERA"> </uses-permission>
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
 
     <application
@@ -14,12 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".open_camera"></activity>
-        <activity android:name=".face_scan" android:parentActivityName=".login">
-
-        </activity>
-        <activity android:name=".create_account" />
-        <activity android:name=".login">
+        <activity android:name=".OpenCamera"/>
+        <activity android:name=".FaceScan"/>
+        <activity android:name=".BarcodeScanner"/>
+        <activity android:name=".HomeScreen"/>
+        <activity android:name=".CreateAccount" />
+        <activity android:name=".LoginScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
