--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.moodvie">
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.CAMERA" />
-
-
 
     <application
         android:allowBackup="true"
@@ -15,12 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".OpenCamera"/>
-        <activity android:name=".FaceScan"/>
-        <activity android:name=".BarcodeScanner"/>
-        <activity android:name=".HomeScreen"/>
+        <activity android:name=".SettingsMenu"></activity>
+        <activity android:name=".OpenCamera" />
+        <activity android:name=".FaceScan" />
+        <activity android:name=".BarcodeScanner" />
+        <activity android:name=".HomeScreen" />
         <activity android:name=".CreateAccount" />
-        <activity android:name=".LoginScreen">
+        <activity android:name=".LoginScreen" />
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
