Fixed settings page and login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SettingsMenu"></activity>
+        <activity android:name=".SettingsPage" />
         <activity android:name=".OpenCamera" />
         <activity android:name=".FaceScan" />
         <activity android:name=".BarcodeScanner" />
