--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".HomeScreen" />
         <activity android:name=".CreateAccount" />
         <activity android:name=".LoginScreen" />
+        <activity android:name=".MoviePage" />
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
