--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies{
     implementation 'com.google.cloud:google-cloud-vision:1.68.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.iarcuschin:simpleratingbar:0.1.5'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 }
