--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,13 @@ repositories {
 }
 dependencies{
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
     implementation 'com.android.volley:volley:1.1.0'
 //    implementation 'com.google.api-client:google-api-client:1.30.5'
@@ -47,4 +47,5 @@ dependencies{
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'androidx.test:core:1.2.1-alpha02'
 }
