--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".SettingsPage" />
         <activity android:name=".OpenCamera" />
 
-        <activity android:name=".FaceScanner">
+        <activity android:name=".FaceScanner"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="com.google.firebase:firebase-ml-vision.DEPENDENCIES"
                 android:screenOrientation="portrait"
@@ -48,7 +49,8 @@
             android:screenOrientation="portrait" >
         </activity>
 
-        <activity android:name=".SplashScreen">
+        <activity android:name=".SplashScreen"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
